2010-04-26  James Youngman  <jay@gnu.org>

	Add a tool for creating (large) SCCS files.
	* unit-tests/Makefile.am: Build test_bigfile.
	* unit-tests/test_bigfile.cc: New test program; produces a large
	SCCS file.
	* sid.h (class sid): Make sid::sid(short,short,short,short)
	public, so that we can use it from one of the test programs.

2010-04-25  James Youngman  <jay@gnu.org>

	Allow the user to disable valgrind after running configure.
	* README (--enable-max-line-length): Document this configure
	option.  Explain how to make the other formats of manual (PDF,
	HTML).  Explain how to use CSSC_DISABLE_VALGRIND.
	* unit-tests/Makefile.am (TESTS_ENVIRONMENT): Invoke the unit
	tests via 'testwrapper.sh'.
	* unit-tests/testwrapper.sh.in: New file; used to invoke the unit
	tests.
	Make sure error tests don't pass if there is a valgrind problem;
	allow the user to disable valgrind.
	* tests/common/command-names: Allow the user to disable Valgrind
	by setting the environment variable CSSC_DISABLE_VALGRIND.
	* configure.ac: Make valgrind exit with status 10 when there is a
	problem, so tests which exercise failure cases in CSSC don't
	mistakenly pass when there is a valgrind problem.  Create
	unit-tests/testwrapper.sh from unit-tests/testwrapper.sh.in.

	Enable the y2k tests.
	* tests/Makefile.am (test-year-2000): Actually run the y2k tests.

	Use valgrind for y2k tests.
	* tests/year-2000/ext.sh: Use valgrind.
	* tests/year-2000/prs-y2k.sh: Likewise.

	Use valgrind for what tests.
	* tests/what/whatbasic.sh: Use valgrind.

	Use valgrind for val tests.
	* tests/val/valbasic.sh: Use valgrind.
	* tests/val/y2k.sh: Likewise.

	Use valgrind for unget tests.
	* tests/unget/exists.sh: Use valgrind.
	* tests/unget/output.sh: Likewise.

	Use valgrind for sact tests.
	* tests/sact/sactbasic.sh: Use valgrind.
	* tests/sact/sf513800.sh: Likewise.

	Use valgrind for rmdel tests.
	* tests/rmdel/basic.sh: Use valgrind.
	* tests/rmdel/exists.sh: Likewise.
	* tests/rmdel/edit.sh: Likewise.